--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "version": "3.8.4"
   },
   "dependencies": {
-    "crypto-es": "^2.1.0"
+    "crypto-es": "^2.1.0",
+    "tsrpc-browser": "^3.4.16",
+    "tsrpc-cli": "^2.4.5"
   }
 }
