--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,4 +1,12 @@
 {
   "__version__": "1.0.6",
-  "custom_joint_texture_layouts": []
+  "custom_joint_texture_layouts": [],
+  "general": {
+    "designResolution": {
+      "fitHeight": false,
+      "fitWidth": true,
+      "width": 720,
+      "height": 1280
+    }
+  }
 }
