--- a/service/package.json
+++ b/service/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "redis": "^4.6.14",
     "tsrpc": "^3.4.17"
   }
